# RustTube

./: .gitignore  Cargo.toml  README.md  docker-compose-prod.yml  docker-compose.yml
.github/workflows/: backend-unit-tests.yaml  publish.yaml
backend/: Cargo.toml  Dockerfile  Dockerfile-dev  Dockerfile-prod
backend/src/: api.rs  main.rs
db-fixtures/: videos.json
frontend/: Dockerfile-dev  Dockerfile-prod  index.html  package-lock.json  vite.config.js
frontend/src/pages/: Home.vue  Login.vue  Register.vue
frontend/src/router/: index.js
history/: Cargo.toml  Dockerfile-dev  Dockerfile-prod
history/src/: api.rs  main.rs
recommendations/: Cargo.toml  Dockerfile-dev  Dockerfile-prod
recommendations/src/: api.rs  main.rs
scripts/: deploy.yaml
storage/: Cargo.toml  Dockerfile  Dockerfile-dev  Dockerfile-prod
storage/src/: api.rs  main.rs
users/: Cargo.toml  Dockerfile-dev  Dockerfile-prod
users/src/: api.rs  main.rs
