[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[profile.dev]
incremental = true
lto = "off"

[profile.release]
incremental = true
lto = "fat"


[dependencies]
actix-web = "4.9.0"
awc = "3.5.1"
futures = "0.3.31"
lapin = "2.5.1"
mongodb = "3.2.1"
serde = "1.0.218"
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"]}
