[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[profile.dev]
incremental = true
lto = "off"

[profile.release]
incremental = true
lto = "fat"

[dev-dependencies]
mockall = "0.11"      # Only for testing
serial_test = "1.0"   # Only for testing
pretty_assertions = "1.3"  # Better test assertions
actix-rt = "2"

[dependencies]
actix-web = "4.9.0"
actix-multipart = "0.4"
awc = "3.5.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
futures = "0.3.31"
lapin = "2.5.1"
mongodb = "3.2.1"
reqwest = { version = "0.11", features = ["json", "multipart", "blocking", "rustls-tls"] }
serde = "1.0.218"
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"]}
uuid = { version = "1.4", features = ["v4"] }
