[package]
name = "recommendations"
version = "0.1.0"
edition = "2021"

[profile.dev]
incremental = true
lto = "off"

[profile.release]
incremental = true
lto = "fat"

[dependencies]
actix-web = "4.9.0"
cargo-watch = "8.5.3"
futures-lite = "2.6.0"
lapin = "2.5.0"
mongodb = "3.2.2"
serde = "1.0.218"
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"]}

