[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[profile.dev]
incremental = true
lto = "off"

[profile.release]
incremental = true
lto = "fat"

[dependencies]
actix-web = "4.9.0"
actix-multipart = "0.4"
azure_storage = "0.21.0"
azure_core = "0.17"
azure_storage_blobs = "0.21.0"
futures = "0.3.31"
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"]}
