[package]
name = "users"
version.workspace = true
edition.workspace = true

[dependencies]
actix-web = "4.9.0"
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde", "clock"] }
jsonwebtoken = "9"
mongodb = "3.2.1"
rand = "0.8"
serde = "1.0.218"
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"]}
